[workspace]
members = [
    "models/*",
    "create_chat_completion",
    "create_chat_completion_stream",
    "create_chat_completion_default",
    "create_image",
    "create_image_edit",
    "create_image_variation",
    "create_embedding",
    "create_transcription",
    "create_translation",
    "list_files",
    "upload_file",
    "delete_file",
    "retrieve_file",
    "retrieve_file_content",
    "create_moderation",
    "function_calling",
    "function_calling_stream",
]

default-members = ["openai_dive"]
