[workspace]
members = [
    "models/delete_fine_tune_model",
    "models/list_models",
    "models/retrieve_model",
    "chat/create_chat_completion",
    "chat/create_chat_completion_stream",
    "chat/function_calling",
    "chat/function_calling_stream",
    "audio/create_transcription",
    "audio/create_translation",
    "embeddings/create_embedding",
    "moderations/create_moderation",
    "images/create_image",
    "images/create_image_edit",
    "images/create_image_variation",
    "files/delete_file",
    "files/list_files",
    "files/retrieve_file",
    "files/retrieve_file_content",
    "files/upload_file",
]
