[workspace]
members = [
    "audio/create_transcription",
    "audio/create_translation",
    "audio/create_speech",
    "chat/create_chat_completion",
    "chat/create_chat_completion_stream",
    "chat/function_calling",
    "chat/function_calling_stream",
    "embeddings/create_embedding",
    "fine_tuning/list_fine_tuning_jobs",
    "fine_tuning/create_fine_tuning_job",
    "fine_tuning/retrieve_fine_tuning_job",
    "fine_tuning/cancel_fine_tuning_job",
    "fine_tuning/list_fine_tuning_job_events",
    "files/delete_file",
    "files/list_files",
    "files/retrieve_file",
    "files/retrieve_file_content",
    "files/upload_file",
    "images/create_image",
    "images/create_image_edit",
    "images/create_image_variation",
    "models/delete_fine_tune_model",
    "models/list_models",
    "models/retrieve_model",
    "moderations/create_moderation",
    "assistants/create_assistant",
    "assistants/retrieve_assistant",
    "assistants/modify_assistant",
    "assistants/delete_assistant",
    "assistants/list_assistants",
    "assistants/assistant_files",
]
