[package]
name = "openai_dive"
version = "1.4.0"
edition = "2021"
license = "MIT"
description = "OpenAI Dive is an unofficial async Rust library that allows you to interact with the OpenAI API."
repository = "https://github.com/tjardoo/openai-client"
documentation = "https://docs.rs/openai_dive"
keywords = ["openai", "async", "ai", "chatgpt"]

[dependencies]
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "json",
    "stream",
    "multipart",
] }
reqwest-eventsource = { version = "0.6.0", optional = true }
reqwest-websocket = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1", optional = true, features = [] }
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
tokio-stream = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
base64 = { version = "0.22", optional = true }
log = { version = "0.4", optional = true }
bytes = { version = "1.5.0", features = ["serde"] }
derive_builder = "0.20.0"
serde_html_form = "0.2"

[features]
default = ["reqwest", "tokio", "tokio-util", "reqwest/default-tls"]
download = ["dep:futures", "dep:base64"]
stream = ["dep:reqwest-eventsource", "dep:futures", "dep:tokio-stream"]
rustls-tls = ["reqwest/rustls-tls"]
realtime = ["reqwest-websocket"]

[lib]
doctest = false
