[package]
name = "function_calling_stream"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
openai_dive = { path = "./../../../openai-client", features = ["stream"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
