[package]
name = "realtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
openai_dive = { path = "./../../openai_dive", features = ["realtime"] }
tokio = { version = "1.0", features = ["full"] }
reqwest-websocket = "0.4"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hound = { version = "3.5", optional = true }
rodio = { version = "0.20", default-features = false, features = [
    "wav",
], optional = true }
log = "0.4"
ftail = "0.2"

[features]
default = ["audio"]
audio = ["hound", "rodio"]
