[package]
name = "currency_converter_assistant"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
openai_dive = { path = "./../../../openai_dive" }
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
